<resources>
    <string name="app_name">Tele Taleem</string>
    <string name="login">WELCOME \nBACK</string>
    <string name="hintmail">Enter email</string>
    <string name="hintpass">Create new Password</string>
    <string name="message2">Class</string>
    <string name="Computer">Computer</string>
    <string name="Punjabi">Punjabi</string>
    <string name="Islamiat">Islamiat</string>
    <string name="Urdu">Urdu</string>
    <string name="Biology">Biology</string>
    <string name="Mathematics">Mathematics</string>
    <string name="Chemistry">Chemistry</string>
    <string name="Physics">Physics</string>
    <string name="English">English</string>
    <string name="message">Please select classes you would like to teach</string>
    <string name="message3">Register as Student</string>
    <string name="message4">Register as Teacher</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="log_in">Log IN</string>
    <string name="register_as_student">Register as Student</string>
    <string name="register_as_teacher">Register as Teacher</string>
    <string name="gender">Gender</string>
    <string name="please_tick_subjects_you_would_like_to_study">Please tick subjects you would like to study :</string>
    <string name="timings">Timings</string>
    <string name="complete">Complete</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_cnic">Enter CNIC</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_email">Enter Email</string>
    <string name="education_details">Education Details</string>
    <string name="experience_years">Experience (years)</string>
    <string name="key_subjects">Key Subjects</string>
    <string name="certification">Certification</string>
    <string name="please_select_subjects_you_would_like_to_teach">Please select subjects you would like to teach :</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ts_cs"><![CDATA[TS & CS]]></string>
    <string name="about">About</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_or_sign_up_to_continue">Please login or sign-up to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="password">password</string>
    <string name="description">Education Details<br></br><br></br>Experience<br></br><br></br>Interest<br></br><br></br>Certification</string>


</resources>