<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TeacherActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message4"
        android:textSize="30sp"
        android:layout_marginStart="70dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/cl2">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_full_name"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toTopOf="@id/cl2" />

            <EditText
                android:id="@+id/cnic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_cnic"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_mobile_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/cnic" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/mobile" />
            <TextView
                android:id="@+id/gen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toTopOf="@id/gender"
                app:layout_constraintBottom_toBottomOf="@id/gender"
                app:layout_constraintTop_toBottomOf="@id/email"/>

            <Spinner
                android:id="@+id/gender"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@id/gen"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <EditText
                android:id="@+id/education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/education_details"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/gender" />

            <EditText
                android:id="@+id/years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/experience_years"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/education" />

            <EditText
                android:id="@+id/KeySubj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/key_subjects"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/years" />

            <EditText
                android:id="@+id/certification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/certification"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/KeySubj" />

            <TextView
                android:id="@+id/selectClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/message"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/certification" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9th"
                android:textSize="20sp"
                android:id="@+id/ninth"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintEnd_toStartOf="@id/tenth"
                app:layout_constraintTop_toBottomOf="@id/selectClass"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10th"
                android:textSize="20sp"
                android:id="@+id/tenth"

                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toEndOf="@id/ninth"
                app:layout_constraintTop_toBottomOf="@id/selectClass"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11th"
                android:textSize="20sp"
                android:id="@+id/eleventh"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintEnd_toStartOf="@id/twelve"
                app:layout_constraintTop_toBottomOf="@id/ninth"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12th"
                android:textSize="20sp"
                android:id="@+id/twelve"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toEndOf="@id/eleventh"
                app:layout_constraintTop_toBottomOf="@id/tenth"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/drop_down"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/twelve" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Select Class"
                        android:layout_centerInParent="true"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24"
                        android:layout_centerInParent="true"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/SubjTeach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/please_select_subjects_you_would_like_to_teach"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/drop_down" />
            <GridLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:columnCount="2"
                android:rowCount="4"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/SubjTeach">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/English"
                    android:textSize="20sp"
                    android:id="@+id/eng"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mathematics"
                    android:textSize="20sp"
                    android:id="@+id/math"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Physics"
                    android:textSize="20sp"
                    android:id="@+id/phy"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Chemistry"
                    android:textSize="20sp"
                    android:id="@+id/chem"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Biology"
                    android:textSize="20sp"
                    android:id="@+id/bio"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Islamiat"
                    android:textSize="20sp"
                    android:id="@+id/isl"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Urdu"
                    android:textSize="20sp"
                    android:id="@+id/urdu"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Punjabi"
                    android:textSize="20sp"
                    android:id="@+id/pun"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Computer"
                    android:textSize="20sp"
                    android:id="@+id/com"/>
            </GridLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/drop_down2"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/grid" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Select Courses"
                        android:layout_centerInParent="true"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24"
                        android:layout_centerInParent="true"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timings"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toTopOf="@id/timings"
                app:layout_constraintBottom_toBottomOf="@id/timings"
                app:layout_constraintTop_toBottomOf="@id/drop_down2"/>

            <Spinner
                android:id="@+id/timings"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@id/time"
                app:layout_constraintTop_toBottomOf="@id/drop_down2" />

            <EditText
                android:id="@+id/passwordbox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox_style"
                android:backgroundTint="#FFFDFD"
                android:hint="@string/hintpass"
                android:inputType="textPassword"
                android:textColor="#090909"
                android:textColorHint="#090909"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/timings" />

            <EditText
                android:id="@+id/passwordbox2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox_style"
                android:backgroundTint="#FFFDFD"
                android:hint="@string/hintpass"
                android:inputType="textPassword"
                android:textColor="#090909"
                android:textColorHint="#090909"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/passwordbox" />

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_password"
                app:layout_constraintBottom_toBottomOf="@id/cl2"
                app:layout_constraintEnd_toEndOf="@id/cl2"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toBottomOf="@id/passwordbox2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>